Fixing the broken layout and making homepage mobile responsive

--- a/style.css
+++ b/style.css
@@ -9,16 +9,45 @@
 body{
     background-color: #CAF0F8;
 }
+.images{
+  width: 300px; 
+  height: 300px; 
+  vertical-align: middle;
+}
 
-.center{
-  display:flex;
-  align-items: center;
-  justify-content: center;
+@media (min-width: 768px) {
+  .images{
+    width: 400px; 
+    height: 400px; 
+    vertical-align: middle;
+  } 
+}
+
+  .no-point{
+    list-style: none;
+ } 
+
+  .center{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 15px;
+    margin-top: 10px;
+  } 
+
+  div h2{
+    font-size: 2.5rem;
+    margin-top: 20px;
+    margin-bottom: 0px;
 }
 
 h2,h3{
   font-size: 2rem;
   text-align: center;
+  max-width: 75%;
+  margin-left: auto;
+  margin-right:auto ;
 }
 
 .logo{
@@ -215,9 +244,6 @@ color:#c32aa3;
   h3{
     margin: 0px 30%;
   }  
-  div h2{
-    margin: 10px 36%;
-  }
   .aim{
     padding-top: 1px;
   }
